add authenticated route
