# src/dist/swagger.json
@@ -3,6 +3,15 @@
   "info": {
     "title": "Example API"
   },
+  "components": {
+    "securitySchemes": {
+      "cookieAuth": {
+        "type": "apiKey",
+        "in": "cookie",
+        "name": "JSESSIONID"
+      }
+    }
+  },
   "paths": {
     "/api/user/signup": {
       "post": {
@@ -28,12 +37,7 @@
                     "type": "string"
                   }
                 },
-                "required": [
-                  "name",
-                  "mail",
-                  "surname",
-                  "password"
-                ],
+                "required": ["name", "mail", "surname", "password"],
                 "additionalProperties": false
               }
             }
@@ -67,10 +71,7 @@
                     "type": "string"
                   }
                 },
-                "required": [
-                  "mail",
-                  "password"
-                ],
+                "required": ["mail", "password"],
                 "additionalProperties": false
               }
             }
@@ -82,6 +83,22 @@
           },
           "400": {
             "description": "Unable to login"
+          }
+        }
+      }
+    },
+    "/api/user/me": {
+      "get": {
+        "summary": "Return my user",
+        "security": {
+          "cookieAuth": []
+        },
+        "responses": {
+          "200": {
+            "description": "Return my user info"
+          },
+          "401": {
+            "description": "User not logged in"
           }
         }
       }
@@ -105,12 +122,7 @@
           "type": "string"
         }
       },
-      "required": [
-        "name",
-        "mail",
-        "surname",
-        "password"
-      ],
+      "required": ["name", "mail", "surname", "password"],
       "additionalProperties": false
     },
     "userLoginRequest": {
@@ -124,10 +136,7 @@
           "type": "string"
         }
       },
-      "required": [
-        "mail",
-        "password"
-      ],
+      "required": ["mail", "password"],
       "additionalProperties": false
     }
   }
